--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,5 @@
 {
   "name": "verticalscroller.js",
-  "version": "1.0.0",
   "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly .
     It is less than 1KB when minified.",
   "main": "dist/verticalScroller.min.js",
@@ -23,5 +22,12 @@
   "bugs": {
     "url": "https://github.com/ankitjain28may/verticalScroller.js/issues"
   },
-  "homepage": "https://github.com/ankitjain28may/verticalScroller.js#readme"
+  "homepage": "https://github.com/ankitjain28may/verticalScroller.js#readme",
+  "ignore": [
+    "**/.*",
+    "node_modules",
+    "bower_components",
+    "test",
+    "tests"
+  ]
 }
