--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
   "name": "verticalscroller.js",
   "version": "1.0.0",
-  "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly .
-    It is less than 1KB when minified.",
+  "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly. It is less than 1KB when minified.",
   "main": "dist/verticalScroller.min.js",
   "repository": {
     "type": "git",
