--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,10 @@
 {
   "name": "verticalscroller.js",
-  "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly .
-    It is less than 1KB when minified.",
+  "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly. It is less than 1KB when minified.",
   "main": "dist/verticalScroller.min.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ankitjain28may/verticalScroller.js.git"
+    "url": "https://github.com/ankitjain28may/verticalScroller.js.git"
   },
   "keywords": [
     "AutoScroll",
@@ -17,12 +16,12 @@
     "AutoScroller",
     "Vertical Scroller"
   ],
-  "author": "Ankit Jain <ankitjain28may77@gmail.com> (http://ankitjain28may.github.io) ",
+  "authors": "Ankit Jain <ankitjain28may77@gmail.com> (http://ankitjain28may.github.io) ",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/ankitjain28may/verticalScroller.js/issues"
   },
-  "homepage": "https://github.com/ankitjain28may/verticalScroller.js#readme",
+  "homepage": "https://github.com/ankitjain28may/verticalScroller.js",
   "ignore": [
     "**/.*",
     "node_modules",
