--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "verticalscroller.js",
+  "name": "autoscroll.js",
   "version": "1.0.0",
-  "description": "Vertical Scroller is a Jquery plugin which is used to auto-scroll your content smoothly. It is less than 1KB when minified.",
-  "main": "dist/verticalScroller.min.js",
+  "description": "Auto Scroll is a Jquery plugin which is used to auto-scroll your content smoothly. It is less than 1KB when minified.",
+  "main": "dist/autoscroll.min.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/ankitjain28may/verticalScroller.js.git"
+    "url": "git+https://github.com/ankitjain28may/autoscroll.js.git"
   },
   "keywords": [
     "AutoScroll",
@@ -20,7 +20,7 @@
   "author": "Ankit Jain <ankitjain28may77@gmail.com> (http://ankitjain28may.github.io) ",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/ankitjain28may/verticalScroller.js/issues"
+    "url": "https://github.com/ankitjain28may/autoscroll.js/issues"
   },
-  "homepage": "https://github.com/ankitjain28may/verticalScroller.js#readme"
+  "homepage": "https://github.com/ankitjain28may/autoscroll.js#readme"
 }
